# chatbot

./: .dockerignore  .gitignore  Dockerfile  README.md  instructions.py  main.py  pyproject.toml  set_vector_store.py
data/: About_Us.docx  Business_Associate_Agreement.docx  Consent_to_Use_DocuMed_AI_Scribe.docx  DocuMed_Ai_Privacy_and_Security.docx  FAQs_DocuMedAi.docx  How_it_Works.docx  Our_Core_Values.docx  Pricing_Plan.docx  Privacy_Policy.docx  Sample FAQs.docx  Terms_of_Service.docx
data/__MACOSX/: ._DocuMedAI Website Content
data/__MACOSX/DocuMedAI Website Content/: ._About Us (1).docx  ._Business Associate Agreement.docx  ._Consent to Use DocuMed AI Scribe (1).docx  ._DocuMed Ai Privacy and Security.docx  ._FAQs DocuMedAi (1).docx  ._How it Works (1).docx  ._Our Core Values (1).docx  ._Privacy Policy.docx  ._Terms of Service.docx
src/documedai_chatbot_agent/: __init__.py
