[project]
name = "documedai-chatbot-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MuhammadAbdullah95", email = "ma2404374@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.0.15",
    "docx2txt>=0.9",
    "fastapi[standard]>=0.116.1",
    "google-genai>=1.25.0",
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.7",
    "openai-agents>=0.1.0",
    "python-dotenv>=1.1.1",
]

[project.scripts]
documedai-chatbot-agent = "documedai_chatbot_agent:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
